# szpp-judge-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile_no_multistage  Makefile  README.md  cloudbuild.yaml  docker-compose.yaml
.github/workflows/: rust.yml
migrations/2022-08-14-045058_users/: up.sql
migrations/2022-08-14-045515_language_type/: up.sql
migrations/2022-08-14-046348_codes/: down.sql  up.sql
migrations/2022-10-08-020600_contests/: down.sql  up.sql
migrations/2022-10-08-020606_tasks/: down.sql  up.sql
migrations/2022-10-08-021944_submits/: down.sql  up.sql
migrations/2022-10-08-030615_contest_tasks/: down.sql  up.sql
migrations/2022-10-08-050640_testcase_sets/: up.sql
migrations/2022-10-08-050646_testcases/: down.sql  up.sql
migrations/2022-10-08-051000_testcase_sets/: down.sql  up.sql
migrations/2022-10-09-073455_testcase_testcase_set/: down.sql  up.sql
migrations/2022-10-26-131550_contest_tasks/: down.sql  up.sql
spec/: openapi.yaml
src/: gcs.rs  judge_runner.rs  lib.rs  main.rs  model.rs  repository.rs  schema.rs  util.rs
src/db/: mod.rs
src/db/model/: code.rs  contest.rs  mod.rs  submit.rs  task.rs  testcase.rs  testcase_sets.rs  user.rs
src/db/repository/: auth.rs  code.rs  contest.rs  mod.rs  submit.rs  task.rs  testcase.rs  testcase_set.rs  user.rs
src/endpoint/: code.rs  user.rs
src/repository/: code.rs  user.rs
src/server/: mod.rs
src/server/endpoint/: auth.rs  code.rs  contests.rs  health_check.rs  mod.rs  ranking.rs  submits.rs  tasks.rs  (+4 more)
test/: testdata.sql
test-data/: __diesel_schema_migrations.csv  contest_tasks.csv  contests.csv  submits.csv  tasks.csv  testcase_sets.csv  testcase_testcase_sets.csv  testcases.csv  users.csv
tools/judge-request/: go.mod  main.go
tools/upload-testcases/: go.mod  main.go
(+10 files in other folders)
