[package]
name = "szpp-judge-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
actix-web = "4.1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0", features = ["postgres", "chrono", "r2d2"] }
anyhow = "1.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.6"
futures = "0.3.24"
jsonwebtoken = "8.1.1"
once_cell = "1.15.0"
env_logger = "0.9.1"
cloud-storage = "0.11.1"
reqwest = "0.11.12"
